k8s-new-services-deployment.yaml
###################################
# SCORES
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: score
  labels:
    app: score
spec:
  replicas: 1
  selector:
    matchLabels:
      app: score
  template:
    metadata:
      labels:
        app: score
    spec:
      containers:
        - name: score
          image: us-central1-docker.pkg.dev/proyectogrupo3/repository-baggage/score:1.0
          ports:
            - containerPort: 3004
          # Realizar pull siempre a la imagen
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: servicio-score
  annotations:
    cloud.google.com/backend-config: '{"default": "baggage-score-config"}'
spec:
  type: NodePort
  selector:
    app: score
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3007
      nodePort: 31023
---

###################################
# RF-003
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rf003
  labels:
    app: rf003
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rf003
  template:
    metadata:
      labels:
        app: rf003
    spec:
      containers:
        - name: rf003
          image: us-central1-docker.pkg.dev/proyectogrupo3/repository-baggage/rf003:1.0
          ports:
            - containerPort: 3005
          # Realizar pull siempre a la imagen
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: servicio-rf003
  annotations:
    cloud.google.com/backend-config: '{"default": "baggage-rf003-config"}'
spec:
  type: NodePort
  selector:
    app: rf003
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3007
      nodePort: 31024
---

###################################
# RF-004
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rf004
  labels:
    app: rf004
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rf004
  template:
    metadata:
      labels:
        app: rf004
    spec:
      containers:
        - name: rf004
          image: us-central1-docker.pkg.dev/proyectogrupo3/repository-baggage/rf004:1.0
          ports:
            - containerPort: 3006
          # Realizar pull siempre a la imagen
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: servicio-rf004
  annotations:
    cloud.google.com/backend-config: '{"default": "baggage-rf004-config"}'
spec:
  type: NodePort
  selector:
    app: rf004
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3007
      nodePort: 31025

---
###################################
# RF-005
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rf005
  labels:
    app: rf005
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rf005
  template:
    metadata:
      labels:
        app: rf005
    spec:
      containers:
        - name: rf005
          image: us-central1-docker.pkg.dev/proyectogrupo3/repository-baggage/rf005:1.0
          ports:
            - containerPort: 3007
          # Realizar pull siempre a la imagen
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: servicio-rf005
  annotations:
    cloud.google.com/backend-config: '{"default": "baggage-rf005-config"}'
spec:
  type: NodePort
  selector:
    app: rf005
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3007
      nodePort: 31026
