k8s-deployments.yml
###################################
# USERS
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  labels:
    app: users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: us-central1-docker.pkg.dev/proyectogrupo3/repository-baggage/users:1.0
          ports:
            - containerPort: 3000
          # Realizar pull siempre a la imagen
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: servicio-users
  annotations:
    cloud.google.com/backend-config: '{"default": "baggage-users-config"}'
spec:
  type: NodePort
  selector:
    app: users
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31019

###################################
# OFFERS
###################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: offers
  labels:
    app: offers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: offers
  template:
    metadata:
      labels:
        app: offers
    spec:
      containers:
        - name: offers
          image: us-central1-docker.pkg.dev/proyectogrupo3/repository-baggage/offers:1.0
          ports:
            - containerPort: 3003
          # Realizar pull siempre a la imagen
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: servicio-offers
  annotations:
    cloud.google.com/backend-config: '{"default": "baggage-offers-config"}'
spec:
  type: NodePort
  selector:
    app: offers
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3003
      nodePort: 31020

###################################
# ROUTES
###################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: routes
  labels:
    app: routes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: routes
  template:
    metadata:
      labels:
        app: routes
    spec:
      containers:
        - name: routes
          image: us-central1-docker.pkg.dev/proyectogrupo3/repository-baggage/routes:1.0
          ports:
            - containerPort: 3002
          # Realizar pull siempre a la imagen
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: servicio-routes
  annotations:
    cloud.google.com/backend-config: '{"default": "baggage-routes-config"}'
spec:
  type: NodePort
  selector:
    app: routes
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
      nodePort: 31021


###################################
# POSTS
###################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts
  labels:
    app: posts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: us-central1-docker.pkg.dev/proyectogrupo3/repository-baggage/posts:1.0
          ports:
            - containerPort: 3001
          # Realizar pull siempre a la imagen
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: servicio-posts
  annotations:
    cloud.google.com/backend-config: '{"default": "baggage-posts-config"}'
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
      nodePort: 31022

###################################
# INGRESS
###################################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  labels:
    name: gateway-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /users
        backend:
          service:
            name: servicio-users
            port: 
              number: 80
      - pathType: Prefix
        path: /offers
        backend:
          service:
            name: servicio-offers
            port: 
              number: 80
      - pathType: Prefix
        path: /routes
        backend:
          service:
            name: servicio-routes
            port: 
              number: 80
      - pathType: Prefix
        path: /posts
        backend:
          service:
            name: servicio-posts
            port: 
              number: 80
